--- a/client/stylesheet/main.scss
+++ b/client/stylesheet/main.scss
@@ -1,11 +1,14 @@
-@import '_bourbon';
+@import "packages/bourbon/bourbon";
+@import "packages/neat/neat";
+
 
 * {
   margin: 0;
   padding: 0;
+  @include box-sizing(border-box);
 }
 
-$line-height: 18px;
+$line-height: 22px;
 $video-color: red;
 $data-color: green;
 $shader-color: blue;
@@ -13,45 +16,239 @@ $width: 1000px;
 $black: #000;
 $white: #efefef;
 $red: rgb(255, 63, 63);
-$font-family: 'Crimson Text', Times, serif;
 
-body {
+$base-font: 'Lato';
+$base-font-weight: 400;
+
+$heading-font: 'Oswald';
+$heading-font-weight: 400;
+
+body,html {
   background: $black;
-  font-family: $font-family;
-  font-weight: 400;
-  font-size: 15px;
+  font-family: $base-font;
+  font-weight: $base-font-weight;
+  font-size: 16px;
+  height: 100%;
+  @include prefixer(font-smoothing, antialiased, webkit moz spec);
+
   line-height: $line-height;
   letter-spacing: 1px;
   color: $white;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 18px;
+  font-size: 24px;
+  vertical-align: top;
+  font-family: $heading-font;
+  font-weight: $heading-font-weight;
+}
+
+.container[role="main"] {
+    @include outer-container;
+    width: 80%;
 }
 
 img {
   @include user-select(none);
 }
 
-a:link, a:visited {
+a {
+    &:link, &:visited {
+        color: $white;
+        text-decoration: none;
+        border-bottom: 1px solid #bbb;
+    }
+
+    &:hover, &:active {
+        border-bottom: 2px solid $white;
+    }
+
+    &.nostyle {
+        text-decoration: none;
+        border-bottom: 0px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+/*
+
+|   |              |
+|---|,---.,---.,---|,---.,---.
+|   ||---',---||   ||---'|
+`   '`---'`---^`---'`---'`
+ */
+
+$navigation-padding: 1em;
+$navigation-background: #3C3C3C;
+$navigation-color: transparentize(white, 0.3);
+$navigation-color-hover: white;
+$navigation-height: 60px;
+$navigation-nav-button-background: rgba(0,0,0,0);
+$navigation-nav-button-background-hover: lighten($navigation-background, 10);
+$navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20);
+$navigation-search-background: lighten($navigation-background, 5);
+$navigation-search-border: 1px solid darken($navigation-background, 5);
+$navigation-active-link-color: transparentize(white, 0.5);
+$navigation-submenu-padding: 1em;
+
+header.navigation {
+
+  background-color: rgba(0,0,0,0.5);
+  border-bottom: 1px solid darken($navigation-background, 10);
+  font-family: $heading-font;
+  height: $navigation-height;
+  width: 100%;
+  z-index: 999;
+
+  @include position(absolute);
+
+  .menu-wrapper {
+    @include outer-container;
+    @include clearfix;
+    @include position(absolute, 0px 0px auto 0px);
+    @include size(auto auto);
+    z-index: 9999;
+    text-align: center;
+  }
+
+  .menu-button {
+    font-size: 24px;
+    cursor: pointer;
+    @include position(absolute, 8px auto auto 0);
+    @include size(48px 48px);
+    border-radius: 48px;
+    border: 0px;
+    background-color: #f72fc9;
+    @include background-image(linear-gradient(#1eb7bf 0%, #f72fc9 50%, #d52c39 100%));
+
+    @include transition( all 0.2s ease-in-out);
+
+    &:hover {
+        background-color: #f72fc9;
+    }
+  }
+
+  .logo {
+    font-family: $heading-font;
+    font-weight: 700;
+    font-size: 32px;
     color: $white;
+
+    letter-spacing: .15em;
     text-decoration: none;
-    border-bottom: 1px solid #bbb;
+    text-transform: uppercase;
+    display: inline-block;
+
+    margin-top: 13px + 5px;
+  }
+
+  a.sign-up {
+    margin-top: 13px;
+    float: right;
+    display: inline;
+    @include transition (all 0.2s ease-in-out);
+    background: $navigation-nav-button-background;
+    color: white;
+    font-size: .8em;
+    font-weight: 800;
+    text-transform: uppercase;
+    padding: .4em .5em;
+
+    &:hover {
+      background: lighten($navigation-nav-button-background, 10);
+    }
+  }
+
 }
 
-a:hover, a:active {
-    border-bottom: 2px solid $white;
+
+
+/*
+
+|                        |
+|    ,---.,   .,---..   .|---
+|    ,---||   ||   ||   ||
+`---'`---^`---|`---'`---'`---'
+          `---'
+*/
+
+
+.container[role="main"] {
+    @include outer-container;
+
+    padding-top: $navigation-height;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 400;
-  line-height: 18px;
-  font-size: 18px;
-  vertical-align: top;
+
+
+
+
+
+
+/*
+
+ Footer
+
+ */
+.footer {
+    @include outer-container;
 }
 
-body.fullpage,
-body.fullpage #content {
-  overflow: hidden;
-}
 
-#content {
-    width: $width;
-    margin: 35px auto;
+
+
+
+/*
+
+
+|  |,--.|  |
+`--||  |`--|
+   ||  |   |
+   ``--'   `
+
+*/
+
+.notfound {
+    @include position( relative );
+    @include size(100% 100%);
+
+    .bg {
+        @include position( absolute );
+        @include size(100% 100%);
+        background-image: url(/images/fucktumblr.gif);
+        background-size: cover;
+        background-position: center top;
+    }
+
+    .error {
+        @include position( absolute , 50% auto auto 50%);
+        @include transform( translate(-50% , -50%));
+        @include size(auto auto);
+
+        /*
+        padding: 30px;
+        background-color: rgba(0,0,0,0.0);
+        border-radius: 10px;
+        */
+
+        text-align: center;
+
+        .logo {
+            font-weight: 700px;
+        }
+
+        .description {
+            margin-top: 60px;
+        }
+    }
 }
