Fixed scss dependencies . Using both mtr and meteor

--- a/client/stylesheet/_header.scss
+++ b/client/stylesheet/_header.scss
@@ -1,5 +1,5 @@
 @import "packages/bourbon/bourbon";
-@import "packages/bitters/base";
+@import "packages/bitters/base/base";
 @import "packages/neat/neat";
 
 /*
