Added grid, fixed scss importing order

--- a/client/components/upload/upload.html
+++ b/client/components/upload/upload.html
@@ -35,9 +35,7 @@
 
 <template name="post_preview_form">
   <div class="post-preview"> 
-    {{#video}}
-      {{{preview_post_embed}}}
-    {{/video}}
+    {{video preview_post}}
   </div>
 </template>
 
