--- a/client/stylesheet/_header.scss
+++ b/client/stylesheet/_header.scss
@@ -1,7 +1,3 @@
-@import "packages/bourbon/bourbon";
-@import "packages/bitters/base/base";
-@import "packages/neat/neat";
-
 /*
 
 |   |              |
@@ -27,7 +23,7 @@ header.navigation {
 
   background-color: rgba(0,0,0,0.5);
   border-bottom: 1px solid darken($navigation-background, 10);
-  font-family: $heading-font;
+  font-family: $header-font-family;
   height: $navigation-height;
   width: 100%;
   z-index: 999;
@@ -61,10 +57,10 @@ header.navigation {
   }
 
   .logo {
-    font-family: $heading-font;
+    font-family: $header-font-family;
     font-weight: 700;
     font-size: 32px;
-    color: $white;
+    color: white;
 
     letter-spacing: .15em;
     text-decoration: none;
