--- a/client/components/grid/_grid.scss
+++ b/client/components/grid/_grid.scss
@@ -1,17 +1,65 @@
+$grid-item-background: lighten( $base-background-color , 15 );
+$grid-item-border: 1px solid lighten($base-font-color, .30);
+$grid-item-columns: 4;
+$grid-item-big-columns: 8;
+$grid-item-color: $base-font-color;
+$grid-item-height: 14em;
+
 .grid-wrapper {
-  @include outer-container;
+  @include clearfix;
+  position: relative;
 
   .grid-item {
-    @include span-columns(4);
-    @include omega(3n);
 
-    padding: 1em;
+    @include transition (all 0.2s ease-in-out);
+    @include span-columns($grid-item-columns);
+
+    height: $grid-item-height;
+    background: $grid-item-background;
+    width: 100%;
+    overflow: hidden;
+    float: left;
+    padding: 2em;
+    border-right: $grid-item-border;
+    border-bottom: $grid-item-border;
+    cursor: pointer;
+
+    @include media($large-screen) {
+      @include span-columns($grid-item-columns);
+    }
+
+    &:hover {
+      background: transparentize($grid-item-color, .95);
+    }
+
   }
-}
 
-.placeholder {
-  @include fill-parent;
+  .grid-item .placeholder {
+    background-color: #f00;
+    height: 8em;
+  }
 
-  background-color: #f00;
-  height: 8em;
+  .grid-item h1 {
+    color: $grid-item-color;
+    font-size: 1.3em;
+    margin-bottom: .4em;
+  }
+
+  .grid-item p {
+    color: transparentize($grid-item-color, .4);
+    @include media($medium-screen) {
+      max-width: 70%;
+    }
+  }
+
+  .grid-item-big {
+    @include media($large-screen) {
+      @include span-columns($grid-item-big-columns);
+    }
+    p {
+      @include media($medium-screen) {
+        max-width: 60%;
+      }
+    }
+  }
 }
