--- a/client/stylesheet/_header.scss
+++ b/client/stylesheet/_header.scss
@@ -7,11 +7,11 @@
  */
 
 $navigation-padding: 1em;
-$navigation-background: #3C3C3C;
+$navigation-background: #000;
 $navigation-color: transparentize(white, 0.3);
 $navigation-color-hover: white;
-$navigation-height: 60px;
-$navigation-nav-button-background: rgba(0,0,0,0);
+$navigation-height: 80px;
+$navigation-nav-button-background: #1C1C1C;
 $navigation-nav-button-background-hover: lighten($navigation-background, 10);
 $navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20);
 $navigation-search-background: lighten($navigation-background, 5);
@@ -21,11 +21,11 @@ $navigation-submenu-padding: 1em;
 
 header.navigation {
 
-  background-color: rgba(0,0,0,0.5);
-  border-bottom: 1px solid darken($navigation-background, 10);
+  background-color: $navigation-background;
+  border-bottom: 1px solid lighten($navigation-background, 10);
   font-family: $header-font-family;
-  height: $navigation-height;
   width: 100%;
+  height: $navigation-height;
   z-index: 999;
 
   @include position(absolute);
@@ -37,18 +37,19 @@ header.navigation {
     @include size(auto auto);
     z-index: 9999;
     text-align: center;
+    padding: 1em;
   }
 
-  .menu-button {
+  .menu-btn {
     font-size: 24px;
     cursor: pointer;
-    @include position(absolute, 8px auto auto 0);
+    @include position(absolute, auto auto auto 0);
     @include size(48px 48px);
     border-radius: 48px;
     border: 0px;
     background-color: #f72fc9;
-    @include background-image(linear-gradient(#1eb7bf 0%, #f72fc9 50%, #d52c39 100%));
 
+    @include background-image(linear-gradient(#1eb7bf 0%, #f72fc9 50%, #d52c39 100%));
     @include transition( all 0.2s ease-in-out);
 
     &:hover {
@@ -66,25 +67,13 @@ header.navigation {
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
-
-    margin-top: 13px + 5px;
   }
 
-  a.sign-up {
-    margin-top: 13px;
+  .upload-dialog-btn {
     float: right;
     display: inline;
-    @include transition (all 0.2s ease-in-out);
-    background: $navigation-nav-button-background;
-    color: white;
-    font-size: .8em;
-    font-weight: 800;
-    text-transform: uppercase;
-    padding: .4em .5em;
 
-    &:hover {
-      background: lighten($navigation-nav-button-background, 10);
-    }
+    @include square-button($navigation-nav-button-background);
   }
 
 }
