--- a/client/stylesheet/main.scss
+++ b/client/stylesheet/main.scss
@@ -7,6 +7,13 @@
 @import "packages/bbfc:refills/refills/video.scss";
 @import "packages/bbfc:refills/refills/modal.scss";
 
+@import "client/stylesheet/_buttons.scss";
+
+
+body {
+    margin: 0px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-size: 24px;
   font-family: $header-font-family;
