Added more containers, debuggers and helpers

--- a/client/components/embeds/embeds.html
+++ b/client/components/embeds/embeds.html
@@ -1,7 +1,8 @@
 <template name="video">
 <div class="video">
   <div class="video-wrapper">
-    {{{html}}}
+      {{log this}}
+      {{{html}}}
   </div>
 </div>
 </template>
