--- a/client/stylesheet/_variables.scss
+++ b/client/stylesheet/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$helvetica:  'Oswald', 'Helvetica Neue', serif;
+$helvetica:  'Terminal Dosis', 'Oswald', 'Helvetica Neue', serif;
 $sans-serif: 'Open Sans', sans-serif;
 $serif:      'Roboto Slab', serif;
 $monospace:   Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
