--- a/client/stylesheet/main.scss
+++ b/client/stylesheet/main.scss
@@ -9,9 +9,12 @@
 
 @import "client/stylesheet/_buttons.scss";
 
+@import "client/utils/datgui/_debugger.scss";
 
 body {
     margin: 0px;
+
+    @include transition( padding-top 0.3s cubic-bezier( 0, 0.69, 0.42, 1 ) );
 }
 
 h1, h2, h3, h4, h5, h6 {
