Added default accounts support. Fixed more scss, added tags and other minimal progress

--- a/client/components/grid/grid.html
+++ b/client/components/grid/grid.html
@@ -27,8 +27,8 @@
 
 <template name="videofeed">
   {{#gridWrapper}}
-    {{# each post }}
-      {{> gridItem item=this}}
+    {{# each posts }}
+      {{> gridItem this}}
     {{/each}}
   {{/gridWrapper}}
 </template>
