--- a/client/stylesheet/main.scss
+++ b/client/stylesheet/main.scss
@@ -4,11 +4,11 @@
 @import "client/stylesheet/_variables.scss";
 @import "packages/bitters/base/base";
 
+
 @import "packages/bbfc:refills/refills/video.scss";
 @import "packages/bbfc:refills/refills/modal.scss";
 
 @import "client/stylesheet/_buttons.scss";
-
 @import "client/utils/datgui/_debugger.scss";
 
 body {
@@ -18,7 +18,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 24px;
+  font-size: 2em;
   font-family: $header-font-family;
   font-weight: $header-font-weight;
 }
@@ -91,6 +91,10 @@ a {
 }
 
 
+/*
+ * Other components
+ */
+@import "_accounts.scss";
 
 
 @import "_404.scss";
