--- a/client/stylesheet/_variables.scss
+++ b/client/stylesheet/_variables.scss
@@ -35,11 +35,11 @@ $base-background-color: black;
 
 // Font Colors
 $base-font-color: $light-gray;
-$base-accent-color: $blue;
+$base-accent-color: $pink;
 
 // Link Colors
 $base-link-color: $base-accent-color;
-$hover-link-color: darken($base-accent-color, 15);
+$hover-link-color: lighten($base-accent-color, 15);
 $base-button-color: $base-link-color;
 $hover-button-color: $hover-link-color;
 
@@ -59,7 +59,7 @@ $form-border-color-focus: $base-accent-color;
 $form-border-radius: $base-border-radius;
 $form-box-shadow: inset 0 1px 3px rgba(0,0,0,0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
-$form-font-size: $base-font-size;
+$form-font-size: 0.8em;
 $form-font-family: $base-font-family;
 
 
