Addin watch page, fixed upload

--- a/client/components/grid/grid.html
+++ b/client/components/grid/grid.html
@@ -4,8 +4,9 @@
   </div>
 </template>
 
+
 <template name="gridItem">
-    <a href="/" class="grid-item">
+    <a href="/w/{{_id}}" class="grid-item">
       <div class="grid-item-holder">
         <div class="front">
           <div class="placeholder">
@@ -22,7 +23,6 @@
       </div>
     </a>
 </template>
-
 
 
 <template name="videofeed">
