--- a/client/components/upload/upload.html
+++ b/client/components/upload/upload.html
@@ -16,7 +16,7 @@
   <div class="upload">
       <h1>UPload video</h1>
 
-    {{#autoForm id="PostUploadPreview" collection="Models.Post" doc=preview_post }}
+    {{#autoForm id="PostUploadPreview" type="insert" collection="Models.Post" doc=preview_post }}
       <fieldset>
             <div class="url-previewer">
             {{> afQuickField  name="url"}}
@@ -38,9 +38,12 @@
 
   <div class="post_metadata">
     <div class="metadata">
+        {{> afFieldInput name="channel" type="hidden"}}
         {{> afQuickField  name="title"}}
         {{> afQuickField  name="description"}}
         {{> afFieldInput  name="tags" placeholder="Comma separated tags"}}
+        {{> afFieldInput name="images" type="hidden"}}
+        {{> afFieldInput name="media" type="hidden"}}
     </div>
 
     <div class="post-preview"> 
