--- a/client/stylesheet/main.scss
+++ b/client/stylesheet/main.scss
@@ -77,6 +77,8 @@ a {
 @import "client/components/grid/_grid";
 @import "client/components/upload/_upload";
 
+@import "client/components/post/_post";
+@import "client/components/disqus/_disqus";
 
 
 
