--- a/client/components/upload/upload.html
+++ b/client/components/upload/upload.html
@@ -27,7 +27,9 @@
             {{/if}}
       </fieldset>
 
-    <button type="submit" class="submit btn">UPLOAD</button>
+      <div class="send-buttons">
+        <button type="submit" class="submit btn">UPLOAD</button>
+      </div>
     {{/autoForm}}
   </div>
 </template>
