--- a/client/stylesheet/_variables.scss
+++ b/client/stylesheet/_variables.scss
@@ -1,11 +1,12 @@
 // Typography
 $helvetica:  'Oswald', 'Helvetica Neue', serif;
+$helvetica:  'Lato','HelveticaCondensed', Helvetica, Arial, 'Lucida Grande';
 $sans-serif: 'Open Sans', sans-serif;
 $serif:      'Roboto Slab', serif;
 $monospace:   Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
 
-$base-font-family: $monospace;
-$base-font-weight: 100;
+$base-font-family: $sans-serif;
+$base-font-weight: 300;
 
 $header-font-family: $helvetica;
 $header-font-weight: 800;
@@ -19,14 +20,14 @@ $base-border-radius: em(0);
 
 
 // Colors
-$blue: #477DCA;
+$blue: #5333B0;
 $dark-gray: #333;
 $medium-gray: #999;
-$light-gray: #DDD;
+$light-gray: #EEE;
 $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
-$pink: #BF21C5;
+$pink: #E5297B;
 $light-pink: #D733DD;
 
 
@@ -34,7 +35,7 @@ $light-pink: #D733DD;
 $base-background-color: black;
 
 // Font Colors
-$base-font-color: $light-gray;
+$base-font-color: #fff;
 $base-accent-color: $pink;
 
 // Link Colors
@@ -44,7 +45,7 @@ $base-button-color: $base-link-color;
 $hover-button-color: $hover-link-color;
 
 // Border color
-$base-border-color: $light-gray;
+$base-border-color: rgba(0, 255, 216, 0.47);
 
 // Flash Colors
 $alert-color: $light-yellow;
@@ -57,13 +58,13 @@ $form-border-color: $base-border-color;
 $form-border-color-hover: darken($base-border-color, 10);
 $form-border-color-focus: $base-accent-color;
 $form-border-radius: $base-border-radius;
-$form-box-shadow: inset 0 1px 3px rgba(0,0,0,0.06);
-$form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
-$form-font-size: 0.8em;
+$form-box-shadow: none; //inset 0 1px 3px rgba(0,0,0,0.06);
+$form-box-shadow-focus: none; //$form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
+$form-font-size: 1.0em;
 $form-font-family: $base-font-family;
 
 
 // Enable visual-grid (edebugging)
 $visual-grid: true;
 
-$large-screen: em(860);
+$large-screen: em(1066);
