--- a/client/stylesheet/main.scss
+++ b/client/stylesheet/main.scss
@@ -13,24 +13,29 @@
 
 body {
     margin: 0px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 
     @include transition( padding-top 0.3s cubic-bezier( 0, 0.69, 0.42, 1 ) );
+    -webkit-font-smoothing: antialiased;
+    background: url(/images/congruent_outline.png) repeat;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 2em;
   font-family: $header-font-family;
   font-weight: $header-font-weight;
 }
 
 img {
   @include user-select(none);
+  max-width: none;
 }
 
 a {
     &:link, &:visited {
         text-decoration: none;
-        border-bottom: 1px solid $light-gray;
+        border-bottom: 2px solid $light-gray;
     }
 
     &:hover, &:active {
@@ -67,9 +72,14 @@ a {
 .container[role="main"] {
     @include outer-container;
 
-    width: 90%;
+    width: 100%;
     text-align: center;
-    padding-top: $navigation-height;
+    margin-top: $navigation-height + 20;
+    height: 100%;
+
+    padding: 1em;
+
+    background-color: lighten( $base-background-color, 30 );
 }
 
 
@@ -90,6 +100,11 @@ a {
  */
 .footer {
     @include outer-container;
+
+    border-top: 1px solid $light-gray;
+    margin-top: 60px;
+
+    text-align: center;
 }
 
 
@@ -100,5 +115,4 @@ a {
 
 
 @import "_404.scss";
-
 
