--- a/client/components/post/post.html
+++ b/client/components/post/post.html
@@ -1,11 +1,24 @@
 <!-- Watch a single post -->
 <template name="post_watch">
 <div class="post_watch">
+  <div class="masthead">
+      <h1>{{title}}</h1>
+      <div class="action-buttons">
+          <div class="up">
+              up
+          </div>
+          <div class="down">
+              down
+          </div>
+          <div class="save">
+              save
+          </div>
+      </div>
+  </div>
   <div class="hero-unit video-container">
     {{> video media.[0]}}
   </div>
   <div class="info">
-    <p>{{title}}</p>
     <p>{{description}}</p>
     <p>{{tags}}</p>
 
