--- a/client/stylesheet/main.scss
+++ b/client/stylesheet/main.scss
@@ -22,6 +22,10 @@ body {
     background: url(/images/congruent_outline.png) repeat;
 }
 
+::selection {
+    background: $pink;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $header-font-family;
   font-weight: $header-font-weight;
