--- a/client/components/post/post.html
+++ b/client/components/post/post.html
@@ -3,16 +3,9 @@
 <div class="post_watch">
   <div class="masthead">
       <h1>{{title}}</h1>
-      <div class="action-buttons">
-          <div class="up">
-              up
-          </div>
-          <div class="down">
-              down
-          </div>
-          <div class="save">
-              save
-          </div>
+      <div class="action-buttons button-group">
+          <a href="/upvote" class="upvote">up</a>
+          <a href="/downvote" class="downvote">downvote</a>
       </div>
   </div>
   <div class="hero-unit video-container">
