--- a/client/stylesheet/main.scss
+++ b/client/stylesheet/main.scss
@@ -27,20 +27,14 @@ body {
 
 }
 
-.bg {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    z-index: 0;
+
+.page-body {
+    margin: 0px;
     width: 100%;
     height: 100%;
+    position: absolute;
 
-    background-color: #000;
-    background: url(/images/bg-photshop2.png) repeat;
-
-    z-index: -1;
-
-    .gradient {
+    .bg {
         position: fixed;
         top: 0px;
         left: 0px;
@@ -48,42 +42,53 @@ body {
         width: 100%;
         height: 100%;
 
-        @include radial-gradient(ellipse at center, rgba(0,0,0,0.51) 0%, #000 100%);
-    }
-}
+        background-color: #000;
+        background: url(/images/bg-photshop2.png) repeat;
 
-*::selection {
-    background: $pink;
-}
+        z-index: -1;
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $header-font-family;
-  font-weight: $header-font-weight;
-}
+        .gradient {
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            z-index: 0;
+            width: 100%;
+            height: 100%;
 
-img {
-  @include user-select(none);
-  max-width: none;
-}
-
-a {
-    &:link, &:visited {
-        text-decoration: none;
-        border-bottom: 2px solid $light-gray;
+            @include radial-gradient(ellipse at center, rgba(0,0,0,0.51) 0%, #000 100%);
+        }
     }
 
-    &:hover, &:active {
-        border-bottom: 2px solid $dark-gray;
+    *::selection {
+        background: $pink;
     }
 
-    &.nostyle {
-        text-decoration: none;
-        border-bottom: 0px;
+    h1, h2, h3, h4, h5, h6 {
+    font-family: $header-font-family;
+    font-weight: $header-font-weight;
+    }
+
+    img {
+    @include user-select(none);
+    max-width: none;
+    }
+
+    a {
+        &:link, &:visited {
+            text-decoration: none;
+            border-bottom: 2px solid $light-gray;
+        }
+
+        &:hover, &:active {
+            border-bottom: 2px solid $dark-gray;
+        }
+
+        &.nostyle {
+            text-decoration: none;
+            border-bottom: 0px;
+        }
     }
 }
-
-
-
 
 @import "_header.scss";
 
