--- a/client/stylesheet/main.scss
+++ b/client/stylesheet/main.scss
@@ -118,6 +118,7 @@ body {
 
     padding: 1em;
     background-color: rgba(  lighten( $base-background-color , 10) , 0.8 );
+    // #34495e
 
     clear: both;
 
